# wordsmith

./: Cargo.toml  README.md
src/: benchmark.rs  counter.rs  game.rs  lib.rs  main.rs  solvefirst.rs  solver.rs  words.rs
src/data/: wordle.txt
