[package]
name = "wordsmith"
version = "0.1.0"
authors = ["Jerome Boisvert-Chouinard <github@jbchouinard.net>"]
edition = "2018"

[[bin]]
name = "ws-first"
path = "src/solvefirst.rs"

[[bin]]
name = "ws-benchmark"
path = "src/benchmark.rs"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.4"
structopt = { version = "0.3", default-features = false }
